# libthermo

./: meson.build
tests/: meson.build
